redshift pom updated